# fastapitest

./: .env  .gitignore  alembic.ini  pyproject.toml  readme.md
alembic/: env.py
app/: main.py
app/api/v1/todos/: create.py  delete.py  read.py  todo.py  update.py
app/core/: config.py
app/database/: base_class.py  database.py
app/models/: todo.py
app/schemas/: todo.py
fastapi/: pyvenv.cfg
